fix: Fix navbar on mobile

--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -1,69 +1,81 @@
 /* Nav */
 
-.nav-bar{
-    display: flex;
-    gap: 1rem;
-    justify-content: flex-end;
-    width: 100%;
+.nav-bar {
+  display: flex;
+  gap: 1rem;
+  justify-content: flex-end;
+  width: 100%;
 
-    position: fixed;
+  position: fixed;
 
-    top: 0;
-    right:0;
+  top: 0;
+  right: 0;
 
-    padding: 0.25rem 2rem;
+  padding: 0.25rem 2rem;
 
-    background-color: #f5f5f5;
+  background-color: #f5f5f5;
 
-    border-bottom: 1px solid #6BBAEC;
+  border-bottom: 1px solid var(--primary);
 
-    z-index: 10;
+  z-index: 100;
 }
 
-.nav-bar>a{
-    text-decoration: none;
-    color:#111344;
-    font-size: 1.75rem;
-    font-family: 'Bebas Neue', sans-serif;
+.nav-container {
+  z-index: 50;
+  position: fixed;
+  height: 3rem;
+  width: 100%;
+  border-bottom: 1px solid var(--primary);
+  background-color: var(--secondary);
+  display: none;
 }
 
-.nav-bar>a:hover{
-   color: #111344;
-   text-decoration: underline;
+.nav-bar > a {
+  text-decoration: none;
+  color: #111344;
+  font-size: 1.75rem;
+  font-family: "Bebas Neue", sans-serif;
 }
 
-.menu-icon{
-    display: none;
-    position: fixed;
-    top: 0.25rem;
-    right: 0.25rem;
-
-    font-size: 2rem;
-    z-index: 11;
+.nav-bar > a:hover {
+  color: #111344;
+  text-decoration: underline;
 }
 
-@media screen and (max-width:600px) {
-    .menu-icon{
-        display: block;
-    }
+.menu-icon {
+  display: none;
+  position: fixed;
+  right: 0;
 
-    .nav-bar{
-        right: -100%;
-        transition: all 1s ease;
-
-        flex-direction: column;
-        align-items: center;
-        padding-top: 2.5rem;
-    }
-
-    .nav-bar.open{
-        right:0;
-        transition: all 1s ease;
-    }
+  font-size: 3rem;
+  z-index: 51;
 }
 
-@media screen and (min-width:1200px) {
-    .nav-bar{
-        padding-right:calc((100vw - 1200px) / 2);
-    }
+@media screen and (max-width: 600px) {
+  .menu-icon {
+    display: block;
+  }
+  .nav-container {
+    display: block;
+  }
+
+  .nav-bar {
+    right: -100%;
+    transition: all 1s ease;
+
+    flex-direction: column;
+    align-items: center;
+    margin-top: 2.9rem;
+  }
+
+  .nav-bar.open {
+    right: 0;
+    transition: all 1s ease;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .nav-bar {
+    padding-right: calc((100vw - 1200px) / 2);
+  }
 }
